# csmap-qgis-plugin

./: .gitignore  README.md  __init__.py  csmap.py  dem_to_csmap.py  dem_to_csmap.ui  metadata.txt  plugin.py  pyproject.toml  qcsmap.py  sample.py  sample_menu_01.ui  sample_menu_02.py  test_suite.py
.github/workflows/: lint.yaml  release.yaml  test.yaml
csmap_py/csmap/: __main__.py  calc.py  color.py  process.py
i18n/: csmap_algorithm_en.qm  csmap_algorithm_en.ts  csmap_algorithm_ja.qm  csmap_algorithm_ja.ts
processing_provider/: csmap_algorithm.pro  csmap_algorithm.py  csmap_provider.py
tests/: __init__.py  test_menu.py  test_menu_01.py  test_menu_02.py
tests/fixture/: README.md  result.tif
