[tool.poetry]
name = "csmap-qgis-plugin"
version = "0.0.1"
description = ""
authors = ["MIERUNE Inc. <info@mierune.co.jp>"]
readme = "README.md"
packages = [
  { include = "qgis", from = "/Applications/QGIS.app/Contents/MacOS/bin/python3" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.5"
rasterio = "^1.3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
